# pochurl

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  firebase.json  firestore.indexes.json  firestore.rules  pyproject.toml
.github/workflows/: ci.yml
functions/: main.py  requirements.txt
functions/lib/: detect_category.py  entry_to_xml.py  extract_content.py
scripts/: migrate_categories.py
tests/: conftest.py  test_main.py
tests/lib/: test_detect_category.py  test_entry_to_xml.py
