[project]
name = "pochurl"
version = "0.1.0"
description = "Personal RSS feed powered by Cloud Functions"
requires-python = ">=3.13,<3.14"
dependencies = [
    "firebase_functions==0.5.0",
    "readability-lxml==0.8.4.1",
    "lxml_html_clean==0.4.3",
    "requests==2.32.5",
    "firebase-admin==7.2.0",
]

[dependency-groups]
dev = [
    "pytest~=9.0.0",
    "pytest-mock~=3.15.0",
    "ruff~=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["functions"]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
extend-select = ["SIM", "I", "E", "F", "W", "N", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
